--- a/src/Assets/scss/_portfolio.scss
+++ b/src/Assets/scss/_portfolio.scss
@@ -515,7 +515,7 @@
 }
 
 
-.portfolio-sacousel-inner {
+.portfolio-carousel-inner {
   .slick-list{
       margin-left: -200px;
       margin-right: -200px;
@@ -536,7 +536,7 @@
 
 
 
-.portfolio-sacousel-inner{
+.portfolio-carousel-inner{
   .slick-slide {
       padding-left: 15px;
       padding-right: 15px;
@@ -559,7 +559,7 @@
   }
 }
 
-.portfolio-sacousel-inner {
+.portfolio-carousel-inner {
   .slick-list {
       overflow: visible;
   }
@@ -567,7 +567,7 @@
 
 
 
-.portfolio-sacousel-inner ,
+.portfolio-carousel-inner ,
 .rn-slick-dot {
   .slick-dots {
       bottom: -60px;
